--- a/src/app/speech-to-text/speech-to-text.component.scss
+++ b/src/app/speech-to-text/speech-to-text.component.scss
@@ -8,8 +8,8 @@ body {
     background-color: #f5f5f5;
 }
 .record_btn {
-    width: 100px;
-    height: 100px;
+    width: 70px;
+    height: 70px;
     font-family: 'Material Icons';
     font-size: 48px;
     color: #4d3ce7;
@@ -50,3 +50,66 @@ body {
   .record_btn[disabled]:active {
     background: none;
   }
+  .recorder_wrapper {
+    width: 100%;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+  
+  .recorder {
+    display: inline-block;
+    text-align: center;
+    width: 500px;
+    max-width: 100%;
+  }
+  .recording {
+    animation: recording 2s infinite ease-in-out;
+    position: relative;
+  }
+  .recording:before {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 0px;
+    height: 0px;
+    margin: 0px;
+    border-radius: 50%;
+    background: rgba(0, 0, 0, 0.05);
+    animation: recording_before 2s infinite ease-in-out;
+  }
+  
+  @keyframes recording {
+    from {
+      transform: scale(1.1);
+    }
+  
+    50% {
+      transform: none;
+    }
+  
+    to {
+      transform: scale(1.1);
+    }
+  }
+  
+  @keyframes recording_before {
+    80% {
+      width: 200px;
+      height: 200px;
+      margin: -100px;
+      opacity: 0;
+    }
+  
+    to {
+      opacity: 0;
+    }
+  }
+  
