--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,4 @@
-<!-- <mat-chip-set class="allign-margin" aria-label="AI Selection">
-    <mat-chip (click)="gotoYAI()">
-      Smart Training Assistant
-    </mat-chip>
-    <mat-chip (click)="gotoFigmaAI()" color="primary">
-        UI WireFrame Generator
-    </mat-chip>
-    <mat-chip (click)="gotoEmailAI()" color="accent">
-        Personal Gmail Assistant
-    </mat-chip>
-  </mat-chip-set> -->
-  <!DOCTYPE html> 
+<!DOCTYPE html> 
 <html lang="en">
    <head>
       <meta charset="UTF-8">
@@ -18,8 +7,7 @@
       <style> * { box-sizing: border-box; } body { margin: 0; padding: 0; font-family: Arial, sans-serif; } .container { max-width: 1200px; margin: 0 auto; padding: 20px; } .tiles { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); grid-gap: 20px; } .tile { background-color: #f2f2f2; padding: 20px; border-radius: 5px; text-align: center; } .tile h2 { margin-top: 0; } @media (max-width: 768px) { .tiles { grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); } } </style>
    </head>
    <body>
-    <div class="header"> <h1>PR's Gen AI Apps</h1></div>
-    <!-- <h4 *ngIf="tileSelected" style="margin: 1rem; font-family: Arial, sans-serif; font-weight: 500;">Welcome to our Generative AI Showcase! Explore the limitless possibilities of artificial intelligence as we highlight its diverse applications across various fields. From stunning art generation to natural language processing, our webpage unveils the groundbreaking innovations shaping our world. Dive in to witness how Generative AI is revolutionizing industries, sparking creativity, and driving transformative change. Join us on this journey of exploration and discovery</h4> -->
+    <div class="header"> <h1>Gen AI Apps</h1></div>
     <router-outlet></router-outlet>
    </body>
 </html>
