--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,13 +19,29 @@
               <p>Introducing your Personal Gmail Assistant AI your smart inbox companion! Manage emails efficiently, schedule tasks seamlessly, and stay organized effortlessly. Revolutionize your email experience with AI-powered assistance.</p>
            </div>
            <div class="tile">
-             <h2 (click)="gotoSynGenAI()" >Medical Billing Data Generator</h2>
-             <p>Empower your healthcare analytics with our Medical Billing Data Generator powered by Gen AI Synthetic Data Generation. Seamlessly replicate real-world billing scenarios, ensuring comprehensive testing and analysis while safeguarding patient privacy and compliance with regulatory standards.</p>
+             <h2 (click)="gotoSynGenAI()" >Synthetic Data Generator</h2>
+             <p>Synthetic data generation AI leverages advanced algorithms to create realistic but entirely artificial data sets. By mimicking patterns and characteristics of real-world data, it enables businesses to generate large volumes of data for various purposes such as testing, training machine learning models, and safeguarding sensitive information. This innovative technology ensures data privacy while facilitating efficient and effective data-driven decision-making processes.</p>
           </div>
            <div class="tile">
               <h2 (click)="gotoSpeechAI()">Speech to Text AI</h2>
               <p>Our speech-to-text application utilizes advanced artificial intelligence algorithms to accurately transcribe spoken language into text in real-time. Whether you're conducting interviews, taking notes, or dictating documents, our AI technology ensures fast and precise transcription, enabling seamless communication and productivity in various settings.</p>
            </div>
+           <div class="tile">
+            <h2 (click)="gotoImageToHtmlAI()">Image to Html AI</h2>
+            <p>In the realm of web development, AI technology is reshaping the landscape by automating the conversion of images into HTML and CSS code. This streamlined process accelerates design implementation, ensuring seamless integration of visual content into web interfaces with unprecedented efficiency.</p>
+         </div>
+         <div class="tile">
+            <h2 (click)="gotoUnitTestAI()">Unit Test Case Generator</h2>
+            <p>Our AI unit test case generator leverages state-of-the-art natural language processing and machine learning techniques to automate the creation of high-quality unit test cases. With this cutting-edge technology, developers can significantly reduce the time and effort required for writing tests, while ensuring comprehensive test coverage and code reliability.</p>
+         </div>
+         <div class="tile">
+            <h2 (click)="gotoPdfChatBot()">PDF Chatbot</h2>
+            <p>Unlock instant answers from PDFs with our AI solution! Seamlessly extract precise information from any PDF document in seconds. Say goodbye to manual searching and hello to instant knowledge at your fingertips.</p>
+         </div>
+         <div class="tile">
+            <h2 (click)="gotoServerLogAsst()">Server Log Assistant</h2>
+            <p>In a bustling IT department, where servers hum with activity around the clock, a dedicated AI assistant tirelessly monitors and analyzes server logs. Its primary function is to detect anomalies, troubleshoot issues, and provide insights to ensure smooth operations and timely interventions when necessary.</p>
+         </div>
         </div>
      </div>
  </body>
